# monte-carlo-parallel-integration

./: .flake8  .gitignore  README.md
Erlang/: Makefile  file_reader.erl  input.txt  main.erl  monte_carlo.erl  run.escript  run_tests.py
FPTL/: Functions.txt  fptl.ppt  monte_carlo.fptl  run.txt  run_tests.py
FPTL/fptl-master/: Fib.txt
Haskell/: CHANGELOG.md  Haskell.cabal  LICENSE  Makefile  Parser.hs  input.txt  main.hs  run_tests.py
Haskell/app/: Main.hs  MonteCarlo.hs  Parser.hs
Haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskell/src/: MonteCarlo.hs  Parser.hs
MPI/: Makefile  helper.cpp  helper.h  input.txt  main.cpp  monte_carlo.cpp  monte_carlo.h  run_tests.py  test_results_20250219_215249.txt
OpenMP/: Makefile  helper.cpp  helper.h  input.txt  main.cpp  monte_carlo.cpp  monte_carlo.h  run_tests.py  test.cpp  test_results_20250218_231306.txt
consistently/: Makefile  helper.cpp  helper.h  input.txt  main.cpp  monte_carlo.cpp  monte_carlo.h
