cabal-version:      3.0
name:               haskell-lib
version:            0.1.0.0
homepage:
    https://github.com/AlibekovAA/monte-carlo-parallel-integration/tree/main

author:             Aslan Alibekov
maintainer:         aslan.alibekov.2017@mail.ru
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Wextra -Werror -O2

executable Haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        haskell-lib
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options: -O2

library
    hs-source-dirs:   src
    exposed-modules:  Parser, MonteCarlo
    build-depends:    base ^>=4.17.2.1, random
    default-language: GHC2021
