cabal-version:      3.0

name:               Haskell
version:            0.1.0.0

synopsis:
    A Haskell project implementing numerical integration using the Monte Carlo method with various approaches to parallel computing.

homepage:
    https://github.com/AlibekovAA/monte-carlo-parallel-integration

license:            MIT

license-file:       LICENSE

author:             Alibekov_A

maintainer:         aslan.alibekov.2017@mail.ru

category:           Math
build-type:         Simple

extra-doc-files:    CHANGELOG.md

executable Haskell
  main-is:             Main.hs
  buildable:           True
  other-modules:       Parser, MonteCarlo
  hs-source-dirs:      app
  build-depends:       base >= 4.7 && < 5
                     , random
                     , parallel
                     , deepseq
                     , parsec
                     , split
                     , text
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields -fspecialise -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -DUNICODE -D_UNICODE
  cpp-options:         -DUNICODE -D_UNICODE
